--- a/portfolio_website/resume_page.css
+++ b/portfolio_website/resume_page.css
@@ -1,5 +1,75 @@
 header {
     background-color: lightblue;
-    margin-top: 25px;
-    text-align: center;
+    text-align: left;
 }
+
+#my_name {
+    padding-top: 20px;
+    padding-left: 72px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+}
+
+#navig {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+}
+
+#everything {
+    font-family: 'Times New Roman', Times, serif;
+}
+
+#far-left {
+    padding-left: 57px;
+}
+
+li{
+    display: block;
+    color: black;
+    text-align: center;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 5px;
+    padding-bottom: 10px;
+  }
+
+#home_text {
+    margin-top: 25px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+
+i {
+    color: #67c1cf
+}
+
+#def-a-better-way-to-do-this {
+    margin-top: 20px;
+    font-size:12px;
+}
+
+#jobs {
+    margin-left: 30px;
+    margin-right: 30px; 
+}
+
+#sections {
+    margin-left: 40px;
+}
+
+footer {
+    background-color: lightblue;
+    text-align: left;
+}
+
+#footer_text {
+    padding-bottom: 20px;
+    margin-left: 25px;
+}
+
+#schools {
+    margin-left:30px;
+}
+
+#school-info {
+    color:#67c1cf;
+}
+
