--- a/final/css/final.css
+++ b/final/css/final.css
@@ -4,12 +4,6 @@ header {
     text-align: center;
 }
 
-#head-text {
-    color: #FCFDFE;
-    padding: 5% 0 5% 0;
-    font-family: 'Inconsolata';
-}
-
 .intro {
     min-height: 40vh;
     text-align: center;
@@ -29,17 +23,22 @@ header {
 
 .intro p {
     text-align: left;
-    font-family: 'Georgia';
+    font-family: 'IBM Plex Serif';
     font-weight: 400;
     font-size: 15px;
     color: #FCFDFE;
 
 }
 
+b {
+    font-family: 'PT Sans'
+}
+
 h1 {
     padding-top: 5%;
     font-size: 3em;
     font-weight: 900;
+
 }
 
 h6 {
@@ -47,13 +46,15 @@ h6 {
     font-weight: 300;
     font-size: .75em;
     padding: 0 10% 0 10%;
+    font-family: 'PT Sans'
 
 }
 
 h2 {
-    font-family: 'Inconsolata';
-    font-size: 1.75em;
+    font-family: 'PT Sans';
+    font-size: 2.5em;
     font-weight: 700;
+    color: white;
 }
 
 main {
@@ -62,6 +63,7 @@ main {
 
 #facts {
     font-size: 40px;
+    padding: 0 15%
 }
 
 .results {
@@ -78,7 +80,7 @@ main {
     color: #FCFDFE;
     font-weight: 400;
     font-size: 19px;
-    font-family: 'Roboto';
+    font-family: 'IBM Plex Serif';
 }
 
 .henry {
@@ -97,8 +99,8 @@ main {
 .henry h5, p {
     color: #FCFDFE;
     font-weight: 400;
-    font-size: 25px;
-    font-family: 'Roboto';
+    font-size: 19px;
+    font-family: 'IBM Plex Serif';
 }
 
 .rules {
@@ -113,8 +115,8 @@ main {
 .rules p {
     color: #FCFDFE;
     font-weight: 400;
-    font-size: 25px;
-    font-family: 'Roboto';
+    font-size: 19px;
+    font-family: 'IBM Plex Serif';
     text-align: center;
 }
 
@@ -128,8 +130,8 @@ main {
 .rpo p {
     color: #FCFDFE;
     font-weight: 400;
-    font-size: 25px;
-    font-family: 'Roboto';
+    font-size: 19px;
+    font-family: 'IBM Plex Serif';
     text-align: center;
 }
 
@@ -140,7 +142,7 @@ main {
 
 .explainer {
     min-height: 21vh;
-    padding: 0 25%;
+    padding: 0 20%;
     padding-top: 7vh;
     background-color: #121212;
 }
@@ -149,25 +151,14 @@ main {
     color: #FCFDFE;
     font-weight: 400;
     font-size: 20px;
-    font-family: 'Roboto';
+    font-family: 'IBM Plex Serif';
     text-align: center;
 }
 
 
-#chart{
-    background-color: #FCFDFE;
-    min-height: 30vh;
-}
-
-
-#taylor {
-    width: 1000px;
-    height: 139px;
-}
-
 h3 {
     font-weight: bold;
-    font-size: 5em;
+    font-size: 4.5em;
     color: #FCFDFE;
     text-align: center;
     padding: 5% 10% 0 10%;
@@ -185,7 +176,7 @@ h3 {
 }
 
 .spacing {
-    min-height: 65vh;
+    min-height: 50vh;
     padding: 10% 20% 0 20%;
     text-align: center;
 
@@ -194,8 +185,8 @@ h3 {
 
 h4 {
     color: #FCFDFE;
-    font-family: 'Roboto';
-    font-size: 1.75em;
+    font-family: 'IBM Plex Serif';
+    font-size: 1.5em;
     font-weight: normal;
 }
 
@@ -204,5 +195,5 @@ footer {
     background-color: #FCFDFE;
     min-height: 10vh;
     text-align: center;
-    font-family: 'Inconsolata'
+    font-family: 'PT Sans';
 }
